added realm swift module

--- a/Demo-iOS/Resources/Strings/en.lproj/Localizable.strings
+++ b/Demo-iOS/Resources/Strings/en.lproj/Localizable.strings
@@ -25,3 +25,6 @@
 
 // Detail Module
 "detailModule.navigationTitle" = "Detail";
+
+// RealmSwift Module
+"realmModule.navigationTitle" = "RealmSwift";
