--- a/Demo-iOS/Resources/Strings/ru.lproj/Localizable.strings
+++ b/Demo-iOS/Resources/Strings/ru.lproj/Localizable.strings
@@ -25,3 +25,6 @@
 
 // Detail Module
 "detailModule.navigationTitle" = "Подробнее";
+
+// RealmSwift Module
+"realmModule.navigationTitle" = "RealmSwift";
